homepage banner added

--- a/index.html
+++ b/index.html
@@ -156,6 +156,25 @@
         </div>
     </div>
 
+    <h4 class="sub-heading-ballot" style="text-align: center;">Attention First Time Visitors: Suggested Use of This Site</h4>
+
+        <div class="job-description can-sec">
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                <ol style="margin-top:10px; line-height:1.6;">
+                    <li>If this is your first time using this site, you may want to follow the suggested steps.</li>
+                    <br>
+                    <li>If you're on a desktop or laptop computer, use the drop down menu below to find the election you're interested in. Then continue following suggested steps.</li>
+                    <br>
+                    <li>If you're on a smartphone or iPad, use the red menu in the top left of the screen to find the election you're interested in. Then continue following suggested steps.</li>
+                    <br>
+                    <li>Many pages on desktop and laptop also use the red menu, so look out for it if you need it.</li>
+                    <br>
+                    <li>Take a look at the official ballot to ensure you know exactly where your preferred candidate will be.</li>
+                </ol>
+            </details>
+        </div>
+
     <!-- <div class="cta-banner">
         <div class="cta-banner-heading">
             Primary Season is well under way. Check the elections section for information.
@@ -171,7 +190,7 @@
         </div>
     </div> -->
 
-    <div class="cta-banner2">
+    <!-- <div class="cta-banner2">
         <div class="cta-banner-heading centered">
             We're Transitioning Into General Election Mode
         </div>
@@ -279,7 +298,7 @@
                   </div>
             </details>
         </div>
-    </div>
+    </div> -->
 
     <!-- text summary modal -->
     <dialog id="Modal1" class="modal">
