homepage banner wording tweaked

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
         </div>
     </div>
 
+    <br>
+    <br>
+
     <h4 class="sub-heading-ballot" style="text-align: center;">Attention First Time Visitors: Suggested Use of This Site</h4>
 
         <div class="job-description can-sec">
@@ -164,13 +167,16 @@
                 <ol style="margin-top:10px; line-height:1.6;">
                     <li>If this is your first time using this site, you may want to follow the suggested steps.</li>
                     <br>
-                    <li>If you're on a desktop or laptop computer, use the drop down menu below to find the election you're interested in. Then continue following suggested steps.</li>
+                    <li>If you're on a desktop or laptop computer, use the drop down menu labeled "Elections" to find the election you're interested in. Then continue following suggested steps.</li>
                     <br>
                     <li>If you're on a smartphone or iPad, use the red menu in the top left of the screen to find the election you're interested in. Then continue following suggested steps.</li>
                     <br>
                     <li>Many pages on desktop and laptop also use the red menu, so look out for it if you need it.</li>
                     <br>
-                    <li>Take a look at the official ballot to ensure you know exactly where your preferred candidate will be.</li>
+                    <li>Remember: This site is a mixture of objective data collection, unexpected press coverage services, and somewhat subjective analysis. A lot of source material is 
+                      provided,so you always have the option of going down the rabbit holes yourselves. We try to be as fair as possible, but it's ultimately up to you what to decide 
+                      what to trust, we're just trying to be helpful.
+                    </li>
                 </ol>
             </details>
         </div>
