candidate banner test 2

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -234,6 +234,43 @@
     <br>
     <br>
 
+    <h4 class="sub-heading-ballot" style="text-align: center;">Suggested Use of Candidate Pages & Project Disclaimer</h4>
+
+    <div class="job-description can-sec">
+        <details>
+            <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+            <ol style="margin-top:10px; line-height:1.6;">
+                <li>Each candidate page is built from multiple sources: campaign websites, social media, interviews, public appearances, and official documents where available.
+                </li>
+                <br>
+                <li>The original goal was to serve strictly as an objective collection of information in one repository. Those aforementioned information resources are on the site, so you are 
+                  always welcome to ignore our analysis and simply do your own.</li>
+                <br>
+                <li>However, because many campaigns did not provide basic materials (such as functional websites or clear agendas), this project has also grown into providing press 
+                  coverage and analysis.</li>
+                  <br>
+                <li>Press coverage and analysis cannot ever be 100% neutral by nature. What you’ll find here is a combination of: 
+                    <ul style="margin-top:6px; line-height:1.5;">
+                        <li><b>Objective collection</b> – links, documents, transcripts, videos, and campaign content.</li>
+                        <li><b>Press services</b> – interviews, outreach attempts, and first-hand reporting.</li>
+                        <li><b>Analysis and commentary</b> – moderate opinions meant to help voters who won’t have time to “go down the rabbit holes” themselves.</li>
+                    </ul>
+                </li>
+                <br>
+                <li>The point of view here is informed by two years of doing the legwork of online research, boots on the ground research, and networking. 
+                  </li>
+                  <br>
+                  For example: in 2025, one might think that every candidate ought to have a working campaign website and the county would have specific campaign events to ensure voters can 
+                  interact with potential leadership/representation before they're hired to lead/represent. But since that often isn’t the case, my perspective comes from 
+                  asking for this information repeatedly, realizing the depth of the problem, and showing how it plays out in practice.</li>
+                <br>
+                <li>Think of this site as a <b>repository first</b>, a <b>press surrogate second</b>, and a <b>moderate guide third</b>. The combination isn’t perfect, but it’s an 
+                  honest attempt to make sense of what’s missing locally and help voters access more than they otherwise could, or at least a lot more efficiently.</li>
+            </ol>
+        </details>
+    </div>
+
+
      <div class="title-info">
         <h2>John P. Capizola</h2>
          <div class="running-for">
