candidate tutorial and disclaimer section added

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -192,7 +192,54 @@
 
 <div class="container">
 
-    
+    <br>
+    <br>
+
+    <h4 class="sub-heading-ballot" style="text-align: center;">Suggested Use of Candidate Pages & Project Disclaimer</h4>
+
+    <!-- Candidate Page: Tutorial + Condensed Disclaimer -->
+    <div class="candidate-help" style="max-width:900px;margin:0 auto 18px auto;">
+        <!-- Condensed, always-visible disclaimer -->
+        <p style="font-style:italic; font-size:0.95rem; margin:0 0 8px 0;">
+            Note: There are a few ways to use this page. It mixes objective source material with light analysis and first-hand reporting so voters can choose their depth.
+        </p>
+
+        <details style="border:1px solid #ddd; border-radius:12px; padding:10px 14px; background:#f5f6f8;">
+            <summary style="cursor:pointer; text-decoration:underline; color:#0a58ca; font-weight:600;">
+            How to get the most out of this candidate page
+            </summary>
+            <ol style="margin:10px 0 0 18px; line-height:1.6;">
+            <li><b>Start with the Quick Summary.</b> Click the <em>Quick Summary</em> button underneath the websites section. It gives you the fast take: what we know from sources + 
+                brief analysis from a “data collector / local reporter” point of view. 
+                <!-- If you have an anchor or modal id, you can link it: <a href="#quick-summary">(jump)</a> -->
+            </li>
+            <li><b>Scan the objective sources.</b> If you want more data, jump into the source material we’ve collected:
+                <ul style="margin-top:6px;">
+                    <li>Official campaign website (if available)</li>
+                    <li>Social media pages and posts (if available)</li>
+                    <li>Interviews (video/audio) and transcripts (if available)</li>
+                </ul>
+                <!-- Optional anchors if you have sections: 
+                    <a href="#official-links">Campaign links</a> · <a href="#interviews">Interviews</a> -->
+            </li>
+            <li><b>Check the agenda & positions.</b> Look for the candidate’s stated agenda and issue stances. We try to group them plainly so you can compare across candidates 
+                quickly.</li>
+            <li><b>Read the Transparency/Accessibility rating.</b> For a deeper look at how transparent the candidate has been (web presence, interviews, follow-ups, meet n greets) and 
+                how communicative they've been in response to outreach, see the rating and its short explanation. This helps you understand what’s easy to find and who is easy to 
+                contact.
+                <!-- <a href="#transparency">Transparency rating</a> -->
+            </li>
+            <li><b>Use the page as a multi-layered hub.</b> 
+                If you 'just want the facts', stick to the source documents. If you want opinions about transparency, accessibility, and communication, check the transparency meter. 
+                If you want coverage somewhere in between, like interviews that range from introductory to moderately pressing, watch the interviews. Choose your own adventure.</li>
+            </ol>
+
+            <!-- Bookend disclaimer -->
+            <p style="font-size:0.92rem; margin:14px 0 0 0; color:#444;">
+            Where we add context or opinion, it’s to help busy voters make sense of gaps in local information. Not everyone has time to be a volunteer politico.
+            </p>
+        </details>
+    </div>
 
      <div class="title-info">
         <h2>Larae Smith</h2>
