--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -236,37 +236,47 @@
 
     <h4 class="sub-heading-ballot" style="text-align: center;">Suggested Use of Candidate Pages & Project Disclaimer</h4>
 
-    <div class="job-description can-sec">
-        <details>
-            <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
-            <ol style="margin-top:10px; line-height:1.6;">
-                <li>Each candidate page is built from multiple sources: campaign websites, social media, interviews, public appearances, and official documents where available.
-                </li>
-                <br>
-                <li>The original goal was to serve strictly as an objective collection of information in one repository. Those aforementioned information resources are on the site, so you are 
-                  always welcome to ignore our analysis and simply do your own.</li>
-                <br>
-                <li>However, because many campaigns did not provide basic materials (such as functional websites or clear agendas), this project has also grown into providing press 
-                  coverage and analysis.</li>
-                  <br>
-                <li>Press coverage and analysis cannot ever be 100% neutral by nature. What you’ll find here is a combination of: 
-                    <ul style="margin-top:6px; line-height:1.5;">
-                        <li><b>Objective collection</b> – links, documents, transcripts, videos, and campaign content.</li>
-                        <li><b>Press services</b> – interviews, outreach attempts, and first-hand reporting.</li>
-                        <li><b>Analysis and commentary</b> – moderate opinions meant to help voters who won’t have time to “go down the rabbit holes” themselves.</li>
-                    </ul>
-                </li>
-                <br>
-                <li>The point of view here is informed by two years of doing the legwork of online research, boots on the ground research, and networking. 
-                  </li>
-                  <br>
-                  For example: in 2025, one might think that every candidate ought to have a working campaign website and the county would have specific campaign events to ensure voters can 
-                  interact with potential leadership/representation before they're hired to lead/represent. But since that often isn’t the case, my perspective comes from 
-                  asking for this information repeatedly, realizing the depth of the problem, and showing how it plays out in practice.</li>
-                <br>
-                <li>Think of this site as a <b>repository first</b>, a <b>press surrogate second</b>, and a <b>moderate guide third</b>. The combination isn’t perfect, but it’s an 
-                  honest attempt to make sense of what’s missing locally and help voters access more than they otherwise could, or at least a lot more efficiently.</li>
+    <!-- Candidate Page: Tutorial + Condensed Disclaimer -->
+    <div class="candidate-help" style="max-width:900px;margin:0 auto 18px auto;">
+        <!-- Condensed, always-visible disclaimer -->
+        <p style="font-style:italic; font-size:0.95rem; margin:0 0 8px 0;">
+            Note: There are a few ways to use this page. It mixes objective source material with light analysis and first-hand reporting so voters can choose their depth.
+        </p>
+
+        <details style="border:1px solid #ddd; border-radius:12px; padding:10px 14px; background:#f5f6f8;">
+            <summary style="cursor:pointer; text-decoration:underline; color:#0a58ca; font-weight:600;">
+            How to get the most out of this candidate page
+            </summary>
+            <ol style="margin:10px 0 0 18px; line-height:1.6;">
+            <li><b>Start with the Quick Summary.</b> Click the <em>Quick Summary</em> button underneath the websites section. It gives you the fast take: what we know from sources + 
+                brief analysis from a “data collector / local reporter” point of view. 
+                <!-- If you have an anchor or modal id, you can link it: <a href="#quick-summary">(jump)</a> -->
+            </li>
+            <li><b>Scan the objective sources.</b> If you want more data, jump into the source material we’ve collected:
+                <ul style="margin-top:6px;">
+                    <li>Official campaign website (if available)</li>
+                    <li>Social media pages and posts (if available)</li>
+                    <li>Interviews (video/audio) and transcripts (if available)</li>
+                </ul>
+                <!-- Optional anchors if you have sections: 
+                    <a href="#official-links">Campaign links</a> · <a href="#interviews">Interviews</a> -->
+            </li>
+            <li><b>Check the agenda & positions.</b> Look for the candidate’s stated agenda and issue stances. We try to group them plainly so you can compare across candidates 
+                quickly.</li>
+            <li><b>Read the Transparency/Accessibility rating.</b> For a deeper look at how transparent the candidate has been (web presence, interviews, follow-ups, meet n greets) and 
+                how communicative they've been in response to outreach, see the rating and its short explanation. This helps you understand what’s easy to find and who is easy to 
+                contact.
+                <!-- <a href="#transparency">Transparency rating</a> -->
+            </li>
+            <li><b>Use the page as a multi-layered hub.</b> 
+                If you 'just want the facts', stick to the source documents. If you want opinions about transparency, accessibility, and communication, check the transparency meter. 
+                If you want coverage somewhere in between, like interviews that range from introductory to moderately pressing, watch the interviews. Choose your own adventure.</li>
             </ol>
+
+            <!-- Bookend disclaimer -->
+            <p style="font-size:0.92rem; margin:14px 0 0 0; color:#444;">
+            Where we add context or opinion, it’s to help busy voters make sense of gaps in local information. Not everyone has time to be a volunteer politico.
+            </p>
         </details>
     </div>
 
