school board issues label fixes

--- a/child_pages/cc-elections/lawrence_township_school_board.html
+++ b/child_pages/cc-elections/lawrence_township_school_board.html
@@ -254,7 +254,7 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot" style="text-align: center;">Legislative District 1 Issues</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Lawrence Township School Board Issues</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
