--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -268,7 +268,7 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot" style="text-align: center;">Legislative District 1 Issues</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Vineland School Board Issues</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
@@ -329,7 +329,7 @@
                                 <h4>NON-PARTISAN</h4>
                                 <h6>NON-PARTISAN</h6>  
                             </div>
-                            <div id="republican-candidates">
+                            <div id="independent-candidates">
                                 <div class="table-titles">
                                     <div class="title">
                                         <p class="title-big">OFFICE TITLE</p>
