--- a/child_pages/cc-elections/commercial_school_board_2024.html
+++ b/child_pages/cc-elections/commercial_school_board_2024.html
@@ -253,7 +253,7 @@
 
         <!-- <button class="quick-summary-reopen">quick election summary</button> -->
 
-        <h4 class="sub-heading-ballot" style="text-align: center;">Legislative District 1 Issues</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Commercial Township School Board Issues</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
