school board ballot fixes

--- a/child_pages/cc-elections/bridgeton_school_board_2024.html
+++ b/child_pages/cc-elections/bridgeton_school_board_2024.html
@@ -302,11 +302,11 @@
                     <br>
                     <p class="instructions school-board-instructions">( Click or tap on candidate name to learn more about them )</p>
                     <h3>BRIDGETON SCHOOL BOARD</h3>
-                    <h4>DEMOCRATIC</h4>
-                    <h6>DEMOCRATA</h6>  
+                    <h4>NON-PARTISAN</h4>
+                    <h6>NON-PARTISAN</h6>  
                 </div>
                 
-                <div id="democratic-candidates">
+                <div id="independent-candidates">
                     <div class="table-titles">
                         <div class="title">
                             <p class="title-big">OFFICE TITLE</p>
