--- a/child_pages/cc-elections/commercial_school_board_2024.html
+++ b/child_pages/cc-elections/commercial_school_board_2024.html
@@ -320,13 +320,13 @@
                                     </div>
                                     <div class="title">
                                         <p class="title-letter">A</p>
-                                        <p class="title-party">Republican</p>
-                                        <p class="title-party-espanol">Republicano</p>
+                                        <p class="title-party">Non-partisan</p>
+                                        <p class="title-party-espanol">Non-partisan</p>
                                     </div>
                                     <div class="title">
                                         <p class="title-letter">B</p>
-                                        <p class="title-party">Republican</p>
-                                        <p class="title-party-espanol">Republicano</p>
+                                        <p class="title-party">Non-partisan</p>
+                                        <p class="title-party-espanol">Non-partisan</p>
                                     </div>
                                     <div class="title">
                                         <p class="title-party-pc">PERSONAL CHOICE</p>
@@ -348,7 +348,7 @@
                         <div class="a">
                             <div class="a-row-1">
                                 <div class="org">
-                                    <p>Democrat</p>
+                                    <p>Non-partisan</p>
                                 </div>
                                 <div class="first-name">
                                     <a href="Candidates/porter.html">Sharon L.</a>
@@ -389,7 +389,7 @@
                         <div class="a">
                             <div class="a-row-1">
                                 <div class="org">
-                                    <p>Democrat>
+                                    <p>Non-partisan</p>
                                 </div>
                                 <div class="first-name">
                                     <a href="Candidates/smith.html">Larae</a>
@@ -428,7 +428,7 @@
                             <div class="a">
                                 <div class="a-row-1">
                                     <div class="org">
-                                        <p>Independent</p>
+                                        <p>Non-partisan</p>
                                     </div>
                                     <div class="first-name">
                                         <a href="Candidates/hundt.html">Ronald C.</a>
@@ -469,7 +469,7 @@
                                     <div class="a">
                                         <div class="a-row-1">
                                             <div class="org">
-                                                <p>Republican</p> 
+                                                <p>Non-partisan</p> 
                                             </div>
                                             <div class="first-name">
                                                 <a href="Candidates/campbell.html">Janet A.</a>
