--- a/child_pages/cc-elections/lawrence_township_school_board.html
+++ b/child_pages/cc-elections/lawrence_township_school_board.html
@@ -313,7 +313,7 @@
                                 <h4>NON-PARTISAN</h4>
                                 <h6>NON-PARTISAN</h6>  
                             </div>
-                            <div id="republican-candidates">
+                            <div id="independent-candidates">
                                 <div class="table-titles">
                                     <div class="title">
                                         <p class="title-big">OFFICE TITLE</p>
@@ -391,7 +391,7 @@
                                     <div class="a">
                                         <div class="a-row-1">
                                             <div class="org">
-                                                <p>Republican</p> 
+                                                <p></p> 
                                             </div>
                                             <div class="first-name">
                                                 <a href="Candidates/chirichello.html">Ronny A.</a>
