--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -366,7 +366,7 @@
                                     <div class="a">
                                         <div class="a-row-1">
                                             <div class="org">
-                                                <p>Republican</p> 
+                                                <p>Non-partisan</p> 
                                             </div>
                                             <div class="first-name">
                                                 <a href="Candidates/santiago.html">Francisco</a>
@@ -530,7 +530,7 @@
                         <div class="a">
                             <div class="a-row-1">
                                 <div class="org">
-                                    
+                                    <p>Non-partisan</p>
                                 </div>
                                 <div class="first-name">
                                     <a href="Candidates/douglas.html">Makema T.</a>
