gubernatorial race suggested use section

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -184,6 +184,50 @@
 
     <div class="election-summary can-sec">
 
+        <h4 class="sub-heading-ballot" style="text-align: center;">Suggested Use of Gubernatorial Candidate Pages & Project Disclaimer</h4>
+
+        <!-- Gubernatorial Page: Tutorial + Condensed Disclaimer -->
+        <div class="candidate-help" style="max-width:900px;margin:0 auto 18px auto;">
+            <!-- Condensed, always-visible disclaimer -->
+            <p style="font-style:italic; font-size:0.95rem; margin:0 0 8px 0;">
+                Note: I am not a statewide policy expert, and robust gubernatorial coverage already exists elsewhere. These pages should be thought of mainly in two ways: 
+                (1) a repository of consolidated source data voters can research themselves, and (2) a Cumberland County–specific lens on candidate engagement and visibility.
+            </p>
+
+            <details style="border:1px solid #ddd; border-radius:12px; padding:10px 14px; background:#f5f6f8;">
+                <summary style="cursor:pointer; text-decoration:underline; color:#0a58ca; font-weight:600;">
+                How to get the most out of this candidate page
+                </summary>
+                <ol style="margin:10px 0 0 18px; line-height:1.6;">
+                    <li><b>Start with the Quick Summary.</b> Click the <em>Quick Summary</em> button underneath the websites section. It gives you the fast take: what we know from sources 
+                        + brief observations from a “local data collector / reporter” point of view.
+                    </li>
+                    <li><b>Use the repository of sources.</b> Each page gathers in one place the key documents and links:
+                        <ul style="margin-top:6px;">
+                            <li>Official campaign website (if available)</li>
+                            <li>Candidate social media accounts</li>
+                            <li>Recorded interviews, debate appearances, and transcripts (if available)</li>
+                        </ul>
+                    </li>
+                    <li><b>Check agenda & positions.</b> Where possible, issue stances are grouped plainly to make comparison easier across candidates.</li>
+                    <li><b>Look at Transparency/Accessibility ratings.</b> These explain how responsive and communicative each candidate has been with outreach, 
+                        events, or interviews. It gives voters a sense of who is visible and approachable.
+                    </li>
+                    <li><b>Think regionally.</b> While you should also follow broader statewide outlets (<a href="https://www.newjerseyglobe.com/" target="_blank">NJ Globe</a>, 
+                        <a href="https://pix11.com/" target="_blank">PIX 11</a>, etc.) for general coverage, this site adds a perspective point: 
+                        <em>How do candidates treat Cumberland County?</em> Do they show up at all during their year-long campaign? If so, do they engage with local issues and 
+                        offer concrete plans, or are appearances mostly photo-ops with generic state talking points?
+                    </li>
+                </ol>
+
+                <!-- Bookend disclaimer -->
+                <p style="font-size:0.92rem; margin:14px 0 0 0; color:#444;">
+                This project is meant as a supplemental voter resource. Where context or opinion appears, it is only to help busy South Jersey voters make sense of 
+                statewide races through a local lens.
+                </p>
+            </details>
+        </div>
+
         <h2 style="text-align: center">Election Introduction</h2>
         <br>
         <details>
