gubernatorial race page update

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -202,21 +202,13 @@
                 </p>
 
                 <ol style="margin:10px 0 0 18px; line-height:1.6;">
-                    <li><b>Start with the Quick Summary.</b> Click the <em>Quick Summary</em> button underneath the websites section. It gives you the fast take: what we know from 
-                        sources + brief observations from a “local data collector / reporter” point of view.
+                    <li><b>Start with the Quick Election Introduction.</b> Read the <em>Quick Election Introdcution</em> underneath below. It gives you the 
+                        fast take: what we can reasonably surmise from a “local data collector / reporter” point of view.
                     </li>
-                    <li><b>Use the repository of sources.</b> Each page gathers in one place the key documents and links:
-                        <ul style="margin-top:6px;">
-                            <li>Official campaign website</li>
-                            <li>Candidate social media accounts</li>
-                            <li>Recorded interviews, debate appearances, and transcripts</li>
-                        </ul>
-                    </li>
-                    <li><b>Check agenda & positions.</b> Where possible, issue stances are grouped plainly to make comparison easier across candidates.</li>
-                    <li><b>Look at Transparency/Accessibility ratings.</b> These explain how responsive and communicative each candidate has been with outreach, 
-                        events, or interviews. It gives voters a sense of who is visible and approachable.
-                    </li>
-                    <li><b>Think regionally.</b> While you should also follow broader statewide outlets (<a href="https://www.newjerseyglobe.com/" target="_blank">NJ Globe</a>, 
+                    <li><b>Go to the unofficial ballot page and research the candidates</b> Start with source material from the candidates.
+                    </li>                    
+                    <li><b>Think about regional nuance, if you want.</b> While you should also follow broader statewide outlets 
+                        (<a href="https://www.newjerseyglobe.com/" target="_blank">NJ Globe</a>, 
                         <a href="https://pix11.com/" target="_blank">PIX 11</a>, etc.) for general coverage, this site adds a perspective point: 
                         <em>How do candidates treat Cumberland County?</em> Do they show up at all during their year-long campaign? If so, do they engage with local issues and 
                         offer concrete plans, or are appearances general rallies with generic state talking points that could be viewed on their campaign sites?
@@ -225,8 +217,8 @@
 
                 <!-- Bookend disclaimer -->
                 <p style="font-size:0.92rem; margin:14px 0 0 0; color:#444;">
-                This project is meant as a supplemental voter resource. Where context or opinion appears, it is only to help busy South Jersey voters make sense of 
-                statewide races through a local lens.
+                This project is meant as a repository and supplemental voter resource. Where context or opinion appears, it is only to help busy South Jersey 
+                voters make sense of statewide races through a local lens.
                 </p>
             </details>
         </div>
@@ -268,7 +260,7 @@
         </div>
 
         <h4 class="sub-heading-ballot" style="text-align: center;">Primary Debate Videos</h4>
-        <h5 class="sub-heading-ballot" style="text-align: center;">General Election Debates start 9/21</h5>
+        <p class="sub-heading-ballot" style="text-align: center;">General Election Debates start 9/21, review these if you have too much time on your hands.</p>
         <div class="debate-videos can-sec">
             <details>
                 <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
